--- a/applications/mysql/mysql.yaml
+++ b/applications/mysql/mysql.yaml
@@ -40,6 +40,9 @@ source:
       - id: ami-03ef731cc103c9f09
         region: eu-west-1
         username: ubuntu
+      - id: ami-0196a6e6d6129f2c8
+        region: ap-northeast-1
+        username: ubuntu
     azure_image:
       - urn: Canonical:UbuntuServer:16.04-LTS:latest
         username: adminuser
