--- a/blueprints/wordpress_production_tokyo.yaml
+++ b/blueprints/wordpress_production_tokyo.yaml
@@ -3,7 +3,7 @@ spec_version: 1
 kind: blueprint
 
 metadata:
-  description: LAMP WordPress stack (Linux, Apache, MySQL, PHP)
+  description: Production environment of LAMP WordPress stack (Linux, Apache, MySQL, PHP)
 
 clouds:
   - aws: ap-northeast-1
@@ -15,7 +15,7 @@ inputs:
   - DB_USER: root  # Used to define the db admin account
   - DB_PASS:
       display_style: masked
-      description: please set the root database passwor
+      description: please set the root database password
       default_value: 12345  # Used to define the db admin password
   - DB_NAME: wordpress_demo  # DB_NAME - a target database name
   - AWS_Type:
@@ -44,3 +44,15 @@ applications:
       # only when the database is ready
       depends_on:
         - mysql
+
+infrastructure:
+  connectivity:
+    green_host:
+    virtual_network:
+       id: vpc-0cbce464866b2013f
+       subnets:
+         management:
+          - subnet-0dd974165b7924746
+         application:
+           - subnet-026ea8ffca82242ef
+           - subnet-0d1119efcc20c8221
