Added green hostname

--- a/blueprints/wordpress_production_tokyo.yaml
+++ b/blueprints/wordpress_production_tokyo.yaml
@@ -47,7 +47,7 @@ applications:
 
 infrastructure:
   connectivity:
-    green_host:
+    green_host: green-wordpress.adoc.com
     virtual_network:
        id: vpc-0cbce464866b2013f
        subnets:
