--- a/blueprints/wordpress_aws_Tokyo.yaml
+++ b/blueprints/wordpress_aws_Tokyo.yaml
@@ -49,6 +49,20 @@ applications:
       # only when the database is ready
       depends_on:
         - mysql
+  - advanced-app:  # One instance of mysql (see: applications/advanced-app/advanced-app.yaml)
+      input_values:
+        - DB_USER: $DB_USER
+        - DB_PASS: $DB_PASS
+        - DB_NAME: $DB_NAME
+        - AWS_Instance_Type: $AWS_Type
+        - VM_Type: Standard_A2
+  - basic-app:  # One instance of mysql (see: applications/basic-app/basic-app.yaml)
+      input_values:
+        - DB_USER: $DB_USER
+        - DB_PASS: $DB_PASS
+        - DB_NAME: $DB_NAME
+        - AWS_Instance_Type: $AWS_Type
+        - VM_Type: Standard_A2
 
 infrastructure:
   connectivity:
