--- a/blueprints/wordpress_aws_EU.yaml
+++ b/blueprints/wordpress_aws_EU.yaml
@@ -9,6 +9,7 @@ clouds:
   - aws: eu-west-1
 
 # These are the blueprint parameters and their default values.
+# These are the blueprint parameters and their default values.
 # The values can be changed when creating a sandbox based on this
 # blueprint.
 inputs:
